name: hcwlib
version: 1.0
license: BSD3
homepage:	https://github.com/hcw-lib
build-type: Simple
cabal-version: >=1.6

Library
    build-depends: base >= 3 && < 5, Win32 >= 2.2.2.0
    ghc-options: -Wall -fno-warn-name-shadowing
    cc-options: -fno-strict-aliasing
    exposed-modules:
        Hcw
        Hcw.Window
        Hcw.Types
    extensions: ForeignFunctionInterface, CPP	